tests/test_input_files/good/test_good_str_decl_1.punkt
main {
    const a = "".
    println a.
}
